<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ensemble_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pierre.combos.About"
    tools:showIn="@layout/activity_about"
    android:background="@color/darkBlue"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/aboutMain"
        android:textColor="@color/paleBlue"
        android:textSize="28dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/creditLeadDesigner"
        android:textColor="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/creditArtist"
        android:textColor="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/specialThanks"
        android:textColor="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/font"
        android:textColor="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="?android:buttonBarStyle">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/paleBlue"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="OK"
            android:textColor="@color/paleBlue"
            android:onClick="Home"
            style="?android:buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>

