<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ensemble_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pierre.combos.Main"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="450dp"
        android:layout_height="75dp"
        android:shadowColor="#efc909"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/homepage_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/subTitleTextView"
        android:layout_width="450dp"
        android:layout_height="75dp"
        android:shadowColor="#cc3716"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/homepage_subtitle"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.17" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttons_layout"
        android:layout_width="378dp"
        android:layout_height="396dp"
        android:layout_margin="16dp"
        android:paddingTop="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/ensemble_layout"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.438"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/buttonNewCombo"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:onClick="NewCombo"
            android:text="@string/homepage_button_1"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonMyCombos"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/homepage_button_2"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonNewCombo" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
